# xsu

./: .gitignore  .gitmodules  .weeds  Cargo.toml  README.md  justfile  services_other.toml
crates/sparkler/: Cargo.toml  README.md
crates/sparkler/src/: config.rs  database.rs  main.rs  model.rs
crates/sparkler/src/routing/: pages.rs
crates/sparkler/src/routing/api/: mod.rs  profiles.rs
crates/sparkler/static/: style.css
crates/sparkler/static/js/: app.js  notifications.js  responses.js
crates/sparkler/templates/: account_settings.html  base.html  compose.html  followers.html  following.html  global_question.html  global_question_timeline.html  homepage.html  inbox.html  notifications.html  privacy_settings.html  profile.html  profile_base.html  profile_questions.html  profile_settings.html  reports.html  response.html  settings_base.html  timeline.html
crates/sparkler/templates/components/: response.html
crates/sproc/: .gitignore  Cargo.toml  README.md
crates/sproc/src/: lib.rs  main.rs  model.rs  server.rs
crates/sproc/templates/: base.html  book_listing.html  create.html  create_page.html  custom.html  ds_create.html  ds_edit.html  ds_view.html  edit.html  edit_page.html  error.html  homepage.html  listing.html  manage.html  myaccount.html  noresults.html  page.html  page_listing.html  view.html
crates/sprocd/: Cargo.toml  README.md
crates/sprocd/src/: main.rs
crates/xsu-appman/: Cargo.toml  README.md
crates/xsu-appman/src/: config.rs  lib.rs  main.rs
crates/xsu-authman/: Cargo.toml
crates/xsu-authman/src/: api.rs  database.rs  lib.rs  model.rs
crates/xsu-bulb/: Cargo.toml  README.md
crates/xsu-bulb/src/: api.rs  database.rs  lib.rs  model.rs
crates/xsu-cliff/: Cargo.toml  README.md
crates/xsu-cliff/src/: main.rs
crates/xsu-cliff/templates/: auth.html  base.html  ds_create.html  ds_edit.html  ds_listing.html  ds_view.html  homepage.html  myaccount.html  profile.html
crates/xsu-dataman/: Cargo.toml
crates/xsu-dataman/src/: database.rs  sql.rs  utility.rs
crates/xsu-docshare/: Cargo.toml  README.md
crates/xsu-docshare/src/: api.rs  database.rs  lib.rs  model.rs
crates/xsu-lily/: Cargo.toml  README.md
crates/xsu-lily/src/: config.rs  garden.rs  lib.rs  main.rs  model.rs  pack.rs  patch.rs  stage.rs
crates/xsu-open/: Cargo.toml  README.md
crates/xsu-open/src/: main.rs
crates/xsu-origami/: Cargo.toml  README.md
crates/xsu-slime/: Cargo.toml  README.md
crates/xsu-slime/src/: config.rs  lib.rs  main.rs
crates/xsu-util/: Cargo.toml
crates/xsu-util/src/: fs.rs  lib.rs  ui.rs
src/: config.rs  lib.rs  main.rs  model.rs  server.rs
templates/: base.html  create.html  edit.html  index.html  listing.html  manage.html  noresults.html  view.html
