[workspace]
resolver = "2"
members = [
    "crates/sproc",
    "crates/xsu-appman", 
    "crates/xsu-open",
    "crates/xsu-authman", 
    "crates/xsu-docshare",
    "crates/xsu-dataman",
    "crates/xsu-cliff", 
    "crates/xsu-slime", 
    "crates/xsu-lily",
    "crates/sprocd",
    "crates/xsu-bulb",
    "crates/sparkler"
]
