[package]
name = "sproc"
version = "0.7.0"
edition = "2021"
authors = ["hkau"]
description = "Simple service management"
homepage = "https://swmff.org"
repository = "https://github.com/hkauso/xsu"
license = "MIT"

[features]
postgres = ["xsu-dataman/postgres", "xsu-authman/postgres", "xsu-docshare/postgres"]
mysql = ["xsu-dataman/mysql", "xsu-authman/mysql", "xsu-docshare/mysql"]
sqlite = ["xsu-dataman/sqlite", "xsu-authman/sqlite", "xsu-docshare/sqlite"]
default = ["xsu-dataman/sqlite", "xsu-authman/sqlite", "xsu-docshare/sqlite"]

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["macros", "form"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
clap = { version = "4.5.8", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
sysinfo = "0.30.12"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.14"
xsu-util = { path = "../xsu-util" }
xsu-dataman = { path = "../xsu-dataman", default-features = false }
xsu-authman = { path = "../xsu-authman", default-features = false }
xsu-docshare = { path = "../xsu-docshare", default-features = false }

[[bin]]
path = "src/main.rs"
name = "sproc"
test = false

[lib]
path = "src/lib.rs"
doctest = false
