[package]
name = "xsu-bulb"
version = "0.1.0"
edition = "2021"
description = "Lily remote"
authors = ["hkau"]
homepage = "https://swmff.org"
repository = "https://github.com/hkauso/xsu"
license = "MIT"

[features]
postgres = ["xsu-dataman/postgres"]
mysql = ["xsu-dataman/mysql"]
sqlite = ["xsu-dataman/sqlite"]
# default = ["xsu-dataman/sqlite"] # for development

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
axum-macros = "0.4.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
axum-extra = { version = "0.9.3", features = ["cookie"] }
regex = "1.10.5"
xsu-dataman = { path = "../xsu-dataman", default-features = false }
xsu-authman = { path = "../xsu-authman", default-features = false }
xsu-util = { path = "../xsu-util" }
xsu-lily = { path = "../xsu-lily" }

[[bin]]
path = "src/main.rs"
name = "xsu-bulb"
test = false

[lib]
doctest = false
