[package]
name = "xsu-util"
version = "0.1.1"
edition = "2021"
authors = ["hkau"]
description = "Basic utilities"
homepage = "https://swmff.org"
repository = "https://github.com/hkauso/xsu"
license = "MIT"

[dependencies]
ammonia = "4.0.0"
pulldown-cmark = "0.11.0"
serde = { version = "1.0.204", features = ["derive"] }

[lib]
doctest = false
